@@ -1,26 +1,29 @@
-val ktlint by configurations.creating
+val ktlint: Configuration by configurations.creating
 
 dependencies {
-    ktlint("com.pinterest:ktlint:0.36.0")
+    ktlint("com.pinterest:ktlint:0.47.1") {
+        attributes {
+            attribute(Bundling.BUNDLING_ATTRIBUTE, objects.named(Bundling.EXTERNAL))
+        }
+    }
 }
 
-var ktlintTask = tasks.register<JavaExec>("ktlint") {
-    group = LifecycleBasePlugin.VERIFICATION_GROUP
-    description = "Check Kotlin code style"
+val outputDir = "${project.buildDir}/reports/ktlint/"
+val inputFiles = project.fileTree(mapOf("dir" to "src", "include" to "**/*.kt"))
+
+val ktlintCheck by tasks.creating(JavaExec::class) {
+    group = "verification"
+    description = "Check Kotlin code style."
     classpath = ktlint
-    main = "com.pinterest.ktlint.Main"
-    args("src/main/**/*.kt", "src/test/**/*.kt",
-        "src/integration-test/**/*.kt")
+    mainClass.set("com.pinterest.ktlint.Main")
+    args = listOf("src/**/*.kt")
 }
 
-tasks.register<JavaExec>("ktlintFormat") {
-    group = LifecycleBasePlugin.VERIFICATION_GROUP
-    description = "Fix Kotlin code style deviations"
+val ktlintFormat by tasks.creating(JavaExec::class) {
+    group = "formatting"
+    description = "Fix Kotlin code style deviations."
     classpath = ktlint
-    main = "com.pinterest.ktlint.Main"
-    args("-F", "src/main/**/*.kt", "src/test/**/*.kt",
-        "src/integration-test/**/*.kt")
+    mainClass.set("com.pinterest.ktlint.Main")
+    args = listOf("-F", "src/**/*.kt")
+    jvmArgs = listOf("--add-opens=java.base/java.lang=ALL-UNNAMED")
 }
-
-tasks.named("check").get().dependsOn(ktlintTask)
-tasks.named("style").get().dependsOn(ktlintTask)
